--- a/reciclei_original_app-master/style.css
+++ b/reciclei_original_app-master/style.css
@@ -372,3 +372,94 @@ img {
 .zoom-controls button:hover {
     background-color: var(--black);
 }
+
+.navbar {
+    display: flex;
+    gap: 1.5rem;
+}
+
+.menu-toggle {
+    display: none;
+    font-size: 2.8rem;
+    cursor: pointer;
+    color: var(--text-color);
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        display: none;  
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 50%;
+        background-color: var(--bg);
+        padding: 1rem;
+        z-index: 99;
+    }
+
+    .navbar.active {
+        display: flex;  
+    }
+
+    .navbar a {
+        padding: 1px;
+        font-size: 1.8rem;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+}
+
+@media (max-width: 1024px) {
+    .header section {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 1rem; 
+    }
+
+    .navbar a {
+        font-size: 1.5rem;
+        padding: 0.5rem 0; 
+    }
+
+    .home-container {
+        background-size: contain;
+        height: auto;
+    }
+
+    .content h3 {
+        font-size: 3rem;
+    }
+
+    .menu .box-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 768px) {
+    .header section {
+        padding: 0.5rem; 
+    }
+
+    .navbar a {
+        font-size: 1.4rem;
+        padding: 0.3rem 0; 
+    }
+
+    .content h3 {
+        font-size: 2.5rem;
+    }
+
+    .menu .box-container {
+        grid-template-columns: 1fr;
+    }
+}
+.header section {
+    padding: 1rem;
+}
+.navbar a {
+    padding: 0.5rem 0;
+}
