--- a/reciclei_original_app-master/pages/cadastro/style1.css
+++ b/reciclei_original_app-master/pages/cadastro/style1.css
@@ -287,4 +287,91 @@
   .a {
     text-decoration: underline;
   }
-  
+  .zoom-controls {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin-left: 1rem;
+}
+
+.zoom-controls button {
+    background-color: var(--main-color);
+    color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    font-size: 1.8rem;
+}
+
+.zoom-controls button:hover {
+    background-color: var(--black);
+}
+
+.navbar {
+    display: flex;
+    gap: 1.5rem;
+}
+
+.menu-toggle {
+    display: none;
+    font-size: 2.8rem;
+    cursor: pointer;
+    color: var(--text-color);
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        display: none;  
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 50%;
+        background-color: var(--bg);
+        padding: 1rem;
+        z-index: 99;
+    }
+
+    .navbar.active {
+        display: flex;  
+    }
+
+    .navbar a {
+        padding: 1px;
+        font-size: 1.8rem;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+}
+
+@media (max-width: 1024px) {
+     .navbar a {
+        font-size: 1.5rem;
+        padding: 0.5rem 0; 
+    }
+    .menu .box-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 768px) {
+    .header section {
+        padding: 0.5rem; 
+    }
+
+    .navbar a {
+        font-size: 1.4rem;
+        padding: 0.3rem 0; 
+    }
+
+    .menu .box-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+.navbar a {
+    padding: 0.5rem 0;
+}
